Fix time widths and layout. Added visibility option.

--- a/scss/app/_layout.app.scss
+++ b/scss/app/_layout.app.scss
@@ -85,3 +85,7 @@ ion-header-bar .md-menu {
     margin-top: 8px;
   }
 }
+
+input[type=time] {
+  width: 8em;
+}
