--- a/scss/app/_text.app.scss
+++ b/scss/app/_text.app.scss
@@ -59,3 +59,12 @@ md-list-item.md-3-line > .md-no-style .md-list-item-text h3 {
     color: rgba(0, 0, 0, 0.54);
   }
 }
+
+.md-button.ss-timid {
+  font-weight: 400;
+  text-transform: none;
+}
+span.ss-timid {
+  color: #666666;
+  font-size: 90%;
+}
